fix letter-spacing
поправил letter-spacing

--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -12,8 +12,8 @@
 @media screen and (min-width: 768px) {
   .about-text {
     font-size: 48px;
-    letter-spacing: -0.04;
-    line-height: 1.13em;
+    letter-spacing: -0.04em;
+    line-height: 1.13;
   }
 }
 
